attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743756588683.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:309:6: error: ‘MLInterpreter’ has not been declared
  309 | void MLInterpreter::handlePlotCommand(const std::vector<std::string>& parts) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:313:6: error: ‘MLInterpreter’ has not been declared
  313 | void MLInterpreter::handleInspectCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:317:6: error: ‘MLInterpreter’ has not been declared
  317 | void MLInterpreter::handleValidateCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:321:6: error: ‘MLInterpreter’ has not been declared
  321 | void MLInterpreter::handlePreprocessCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:325:6: error: ‘MLInterpreter’ has not been declared
  325 | void MLInterpreter::handleSplitDatasetCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:329:6: error: ‘MLInterpreter’ has not been declared
  329 | void MLInterpreter::handlePredictCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:333:6: error: ‘MLInterpreter’ has not been declared
  333 | void MLInterpreter::handleListModelsCommand() {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:337:6: error: ‘MLInterpreter’ has not been declared
  337 | void MLInterpreter::handleDeleteModelCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:341:6: error: ‘MLInterpreter’ has not been declared
  341 | void MLInterpreter::handleCompareModelsCommand() {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:345:6: error: ‘MLInterpreter’ has not been declared
  345 | void MLInterpreter::handleCheckStatusCommand() {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:349:6: error: ‘MLInterpreter’ has not been declared
  349 | void MLInterpreter::handleDebugCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:353:6: error: ‘MLInterpreter’ has not been declared
  353 | void MLInterpreter::handleCrossValidateCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:357:6: error: ‘MLInterpreter’ has not been declared
  357 | void MLInterpreter::handleExportResultsCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:361:6: error: ‘MLInterpreter’ has not been declared
  361 | void MLInterpreter::handleScheduleTrainingCommand(const std::vector<std::string>& args) {
      |      ^~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:90: CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2